--- a/L2/L2_data_types.ipynb
+++ b/L2/L2_data_types.ipynb
@@ -280,7 +280,7 @@
    ],
    "source": [
     "# Information of `16-bit brain floating point`\n",
-    "torch.finfo(torch.bfloat16)"
+    "torch.finfo(torch.bfloat16)  # 即只能识别小数点后2位"
    ]
   },
   {
@@ -423,7 +423,7 @@
    },
    "outputs": [],
    "source": [
-    "# tensor_fp32 x tensor_fp32\n",
+    "# tensor_fp32 x tensor_fp32  downcast对矩阵乘法的影响\n",
     "m_float32 = torch.dot(tensor_fp32, tensor_fp32)"
    ]
   },
@@ -550,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
