--- a/L3/L3_models_with_different_data_types.ipynb
+++ b/L3/L3_models_with_different_data_types.ipynb
@@ -493,6 +493,8 @@
     "mean_diff = torch.abs(logits_bf16 - logits_fp32).mean().item()\n",
     "max_diff = torch.abs(logits_bf16 - logits_fp32).max().item()\n",
     "\n",
+    "# 在大模型中或小模型中，推理时，通常将float32 downcast bfloat16或float16，不会带来太大的损失。\n",
+    "# 所以实际中，在推理时，可以放心的转换\n",
     "print(f\"Mean diff: {mean_diff} | Max diff: {max_diff}\")"
    ]
   },
@@ -1059,6 +1061,7 @@
    },
    "outputs": [],
    "source": [
+    "# 我们不希望先加载一个float32模型，再把它转为bfloat16模型，而是希望直接加载bfloat16模型\n",
     "desired_dtype = torch.bfloat16\n",
     "torch.set_default_dtype(desired_dtype)"
    ]
@@ -1192,7 +1195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.14"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
